--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ a{
   text-decoration: none;
   color: white;
 }
+
 /* Estilo menu */
 .menu{
   background-color: rgb(92, 92, 92);
@@ -22,13 +23,17 @@ a{
 ul {
   list-style-type: none;
   display: flex;
-  gap: 10px;
+  margin-bottom: 0px;
+}
+
+ul :hover {
+  color: black
 }
 
 .menu ul {
   display: flex;
   justify-content: center;
-  gap: 60px;
+  gap: 0px  60px;
 }
 
 
@@ -38,8 +43,7 @@ ul {
 
 .menu-item-activo a{
   font-size: 1,9em;
-  color: #AF7AC5;
-  padding: 0px;
+  color:darkgoldenrod;
 }
 
 /* Estilos mains */
@@ -86,16 +90,22 @@ h1 {
 /* Estilos fotter */
 footer {
   background-color: grey;
+  width: auto;
+  height: 150px;
   padding-top: 20px;
-  padding: 10px 30px 10px;
+  align-items: center;
 }
 
-.pie p, a {
+.pie p, a, ul{
   color: white;
+  font-size: 1em;
+  justify-content: center;
+  padding: 0px 10px;
 }
 
 .pie h3 {
-  color: black
+  color: black;
+  font-size: 1.2em;
 }
 
 
@@ -162,21 +172,6 @@ img.pequeña{
   flex-direction: column;
 }
 
-.pie-padre {
-  display: flex;
-  flex-direction: row;
-  gap: 50px;
-  height: 100px;
-  align-items: center;
-}
-
-.pie-nieto {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
-}
 
 /* Estilos GRID */
 .galeria {
@@ -219,7 +214,7 @@ img.pequeña{
 
 /* Media queries */
 /* Celular */
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
 
   .menu {
     background-color: rgb(92, 92, 92);
@@ -281,5 +276,5 @@ img.pequeña{
 
   
 
-}
+} */
 
