--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ main {
 .card {
   background-color: lightgrey;
   padding: 20px 20px 0px 20px;
+
 }
 
 .galeria {
@@ -80,23 +81,9 @@ h1 {
 }
 
 
-/* Estilo formulario */
-.seccion-form div {
-  padding: 5px;
-}
-
-.redes h2, a {
+.redes h2 {
   color:black;
 }
-
-.redes a {
-  color:black;
-}
-
-/* .mapa {
-  width: 250px;
-} */
-
 
 
 /* Estilos fotter */
@@ -121,28 +108,46 @@ footer {
 }
 
 
+
 /* Estilos de imagenes */
 img.mediana{
-    width: 250px;
-    height: 250px;
+  width: 250px;
+  height: 250px;
   }
+
+  img.galeria{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    }
 
 img.pequeña{
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
   }
 
-  img.slide{
-    height: 500px;
-    object-fit: cover;
+  img.logo-pequeño{
+    width: auto;
+    height: 40px;
   }
+
+img.slide{
+  height: 500px;
+  object-fit: cover;
+}
+
+img.servicios{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+
+}
+
 
 /* Estilos Flexbox*/
 .contenedor-padre {
   display: flex;
-  /*flex-direction: row;
-  flex-wrap: wrap;*/
-  flex-flow: row wrap; /* combina los dos anteriores */
+  flex-flow: row wrap;
   gap: 40px;
   align-items: center;
   justify-content: center;
@@ -151,19 +156,18 @@ img.pequeña{
 .contenedor-hijo {
   background-color: lightgrey;
   width: 350px;
+  height: 500px;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
-
-  /* flex-grow: 1   Ajusta las cajas para que no queden espacios en blanco */
-  /* flex-shrink:  */
 }
 
 .index-hijo {
   width: 800px;
-  height: 250px;
+  height: auto;
   padding: 10px;
   text-align: justify;
+  justify-content: center;
   font-size: 1.4em;
 }
 
@@ -179,7 +183,7 @@ img.pequeña{
   display: grid;
   grid-template-columns: repeat(5, 20%);
   grid-template-rows: repeat(4, 250px);
-  gap: 10px;
+  gap: 5px;
 }
 
 .galeria img{
@@ -187,7 +191,9 @@ img.pequeña{
 }
 
 
+
 /* Media queries */
+/* Celular */
 @media (max-width: 767px) {
 
   .menu {
@@ -233,7 +239,7 @@ img.pequeña{
     height: auto;
   }
   .pie p, a, ul{
-    font-size: 0.8em;
+    font-size: 0.9em;
   } 
   .pie h3 {
     font-size: 0.9em;
