Retoques galeria y menu  responsive

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ img.pequeña {
 
 img.logo-pequeño {
   width: auto;
-  height: 40px;
+  height: 25px;
 }
 
 img.slide {
@@ -177,12 +177,27 @@ img.servicios {
 /* Estilos GRID */
 .galeria {
   display: grid;
-  grid-template-columns: repeat(5, 20%);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(4, 250px);
   gap: 5px;
+  width: 100%;
+  margin: auto;
 }
 .galeria img {
   border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.galeria .mediana:nth-child(4) {
+  grid-column-start: span 2;
+}
+.galeria .mediana:nth-child(6) {
+  grid-row-start: span 2;
+}
+.galeria .mediana:nth-child(12) {
+  grid-row-start: span 2;
+  grid-column-start: span 2;
 }
 
 /* Media queries */
@@ -196,24 +211,40 @@ img.servicios {
   .menu ul {
     display: none;
     position: absolute;
+    float: right;
     flex-direction: column;
     background-color: black;
-    width: auto;
+    width: 150px;
     height: auto;
-    font-size: 1.1em;
+    font-size: 0.9em;
     align-items: center;
-    gap: 10pc;
+    margin: 0px;
+    padding-left: 10px;
   }
   label.menu-mobile {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 1.5em;
     color: white;
     cursor: pointer;
-    padding-left: 10px;
-    justify-content: center;
+    padding: 5px 10px;
   }
   #check-menu:checked ~ ul {
     display: block;
+  }
+  .galeria {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(11, 250px);
+    gap: 5px;
+  }
+  .mediana:nth-child(1) {
+    grid-row-start: span 2;
+  }
+  .mediana:nth-child(15) {
+    grid-column-start: span 2;
+    grid-row-start: span 1;
   }
   .card {
     width: 400px;
@@ -249,6 +280,16 @@ img.servicios {
 }
 /* Tablet */
 @media (min-width: 768px) and (max-width: 991px) {
+  .galeria {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(7, 250px);
+    gap: 5px;
+  }
+  .mediana:nth-child(14) {
+    grid-column-start: span 2;
+    grid-row-start: span 1;
+  }
   .pie {
     height: auto;
     gap: 10px;
