--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -7,32 +7,53 @@
       top: 0;
       text-decoration: none;
       ul {
-        display: none;    
+        display: none;
         position: absolute;
+        float: right;
         flex-direction: column;
         background-color: black;
-        width: auto;
+        width: 150px;
         height: auto; 
-        font-size: 1.1em;
+        font-size: 0.9em;
         align-items: center;
-        gap: 10pc;  
+        margin: 0px;
+        padding-left: 10px; 
       }
     }
     
   
     label.menu-mobile {
-      display: block;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       font-size: 1.5em;
       color: white;
       cursor: pointer;
-      padding-left: 10px;
-      justify-content: center;
+      padding: 5px 10px;
+
     }
 
   #check-menu:checked ~ul{
     display: block;
-  }
  
+  }
+
+  .galeria {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(11, 250px);
+    gap: 5px;
+    }
+    .mediana:nth-child(1) {
+        grid-row-start: span 2;
+      }
+      .mediana:nth-child(15) {
+        grid-column-start: span 2;
+        grid-row-start: span 1;
+      }
+
+    
+    
     .card {
       width: 400px;
     }
@@ -72,6 +93,18 @@
 
   /* Tablet */
 @media (min-width:768px) and (max-width: 991px) {
+
+    .galeria {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(7, 250px);
+        gap: 5px;
+    }
+
+    .mediana:nth-child(14) {
+        grid-column-start: span 2;
+        grid-row-start: span 1;
+      }
 
     .pie {
       height: auto;
