--- a/scss/style.scss
+++ b/scss/style.scss
@@ -135,7 +135,7 @@ img.pequeña{
 
 img.logo-pequeño{
     width: auto;
-    height: 40px;
+    height: 25px;
 }
 
 img.slide{
@@ -186,11 +186,26 @@ img.servicios{
 /* Estilos GRID */
 .galeria {
   display: grid;
-  grid-template-columns: repeat(5, 20%);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(4, 250px);
   gap: 5px;
+  width: 100%;
+  margin: auto;
   img{
     border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .mediana:nth-child(4) {
+    grid-column-start: span 2;
+  }
+  .mediana:nth-child(6) {
+    grid-row-start: span 2;
+  }
+  .mediana:nth-child(12) {
+    grid-row-start: span 2;
+    grid-column-start: span 2;
   }
 }
 
