--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,5 @@
-/* Reset */
-*{
-    margin: 0;
-    padding: 0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
-  }
-  a{
-    text-decoration: none;
-    color: white;
-  }
+@import "partials/reset";
+
 
 /* Estilo menu */
 .menu{
@@ -25,17 +16,17 @@
       }
   } 
 
-  ul {
+ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
     margin-bottom: 0px;
     :hover {
-      cursor: pointer;
+    cursor: pointer;
     }
   }
 
-  .menu-item {
+.menu-item {
     a{
       color: white;
     }
@@ -44,14 +35,14 @@
     }
   }
 
-  .menu-item-activo {
+.menu-item-activo {
     a{
       font-size: 1,9em;
       color:darkgoldenrod;
     }
-}
+  }
 
-  #check-menu, label.menu-mobile {
+#check-menu, label.menu-mobile {
     display: none;
   } 
 
@@ -101,7 +92,6 @@ footer {
   justify-content: center;
   padding: 0px 8px;
   }
-
   h3 {
     color: black;
     font-size: 1.2em;
@@ -209,5 +199,5 @@ img.servicios{
   }
 }
 
-@import "queries"
+@import "partials/queries"
 
