--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ img.servicios {
 }
 
 .galeria img:hover {
+  cursor: pointer;
   -webkit-animation-name: pulse;
   animation-name: pulse;
   -webkit-animation-duration: 1s;
