--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,6 +201,7 @@ img.servicios{
 
 // Animacion galeria
 .galeria img:hover {
+      cursor: pointer;
       -webkit-animation-name: pulse;
       animation-name: pulse;
       -webkit-animation-duration: 1s;
