Agrego fuentes locales

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
+@import "partials/fonts";
 @import "partials/reset";
+
 
 
 /* Estilo menu */
@@ -98,6 +100,7 @@ footer {
   h3 {
     color: black;
     font-size: 1.2em;
+    font-weight: bold;
   }
   .dis {
     color: darkgoldenrod;
@@ -105,12 +108,16 @@ footer {
     margin: 0px;
     padding: 5px;
     padding-left: 20px;
- }
+  }
+  .rm{
+    font-family: 'RM';
+  }
+  
  ul {
   :hover {
     cursor: pointer;
   }
- }
+ } 
 }
 
 
@@ -247,11 +254,6 @@ img.servicios{
   }
   } 
 
-  // Modal
-  .mi-modal {
-    height: auto;
-    background-color: aqua;
-  }
 
 @import "partials/queries"
 
