--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "Futura";
+  src: url("../fonts/futuralightbt.ttf");
+}
+@font-face {
+  font-family: "RM";
+  src: url("../fonts/whiteonblack.ttf");
+}
 /* Reset */
 * {
   margin: 0;
   padding: 0;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Futura";
   box-sizing: border-box;
 }
 
@@ -98,6 +106,7 @@ footer {
 .pie h3 {
   color: black;
   font-size: 1.2em;
+  font-weight: bold;
 }
 .pie .dis {
   color: darkgoldenrod;
@@ -105,6 +114,9 @@ footer {
   margin: 0px;
   padding: 5px;
   padding-left: 20px;
+}
+.pie .rm {
+  font-family: "RM";
 }
 .pie ul :hover {
   cursor: pointer;
@@ -243,11 +255,6 @@ img.servicios {
     transform: scale3d(1, 1, 1);
   }
 }
-.mi-modal {
-  height: auto;
-  background-color: aqua;
-}
-
 /* Media queries */
 /* Celular */
 @media (max-width: 767px) {
