--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -2,10 +2,9 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Futura';
     box-sizing: border-box;
   }
   a{
     text-decoration: none;
-    // color: white;
   }
