--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,6 +74,9 @@ h1 {
   h2 {
   color:black;
   }
+  a{
+    color: black;
+  }
   li {
   :hover {
     cursor:pointer;
@@ -93,13 +96,13 @@ footer {
   margin: 0px;
   p, a, ul{
   color: white;
-  font-size: 1em;
+  font-size: 0.95em;
   justify-content: center;
   padding: 0px 8px;
   }
   h3 {
     color: black;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: bold;
   }
   .dis {
